--- a/MyLibrary/MyLibrary/View/App.xaml
+++ b/MyLibrary/MyLibrary/View/App.xaml
@@ -8,12 +8,13 @@
              StartupUri="Autorization.xaml">
     <Application.Resources>
         <ResourceDictionary>
-
             <l:MainViewModel x:Key="MainViewModel"/>
             <l:AddNewViewModel x:Key="AddNewViewModel"/>
             <l:BooksViewModel x:Key="BooksViewModel"/>
             <l:FilmsViewModel x:Key="FilmsViewModel"/>
             <l:SerialsViewModel x:Key="SerialsViewModel"/>
+            <l:MangaViewModel x:Key="MangaViewModel"/>
+            
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
