--- a/MyLibrary/MyLibrary/View/Main.xaml
+++ b/MyLibrary/MyLibrary/View/Main.xaml
@@ -90,21 +90,21 @@
                 <Image Height="140" Source="Resources/Images/Semmi.jpg" Stretch="Fill"/>
                 <ListView Foreground="#FF313131" FontFamily="Champagne &amp; Limousines" FontSize="18">
                     <ListViewItem Height="45" Padding="0">
-                        <Button Background="{x:Null}" BorderBrush="{x:Null}" Width="246" Height="45">
+                        <Button Command="{Binding InfoCommand}" Background="{x:Null}" BorderBrush="{x:Null}" Width="246" Height="45">
                             <StackPanel Orientation="Horizontal" Width="226">
                                 <materialDesign:PackIcon Kind="User" Width="20" Height="20" Foreground="Gray" Margin="5" VerticalAlignment="Center"/>
                                 <TextBlock Text="Об аккаунте" Margin="10"/>
                             </StackPanel>
                         </Button>
                     </ListViewItem>
-                    <ListViewItem Height="45" Padding="0">
+                    <!--<ListViewItem Height="45" Padding="0">
                         <Button Background="{x:Null}" BorderBrush="{x:Null}" Width="246" Height="45">
                             <StackPanel Orientation="Horizontal" Width="226">
                                 <materialDesign:PackIcon Kind="HelpCircleOutline" Width="20" Height="20" Foreground="#FFF08033" Margin="5" VerticalAlignment="Center"/>
                                 <TextBlock Text="Помощь" Margin="10"/>
                             </StackPanel>
                         </Button>
-                    </ListViewItem>
+                    </ListViewItem>-->
 
                     <ListViewItem Height="45" Padding="0">
                         <Button Command="{Binding RandomCommand}" Background="{x:Null}" BorderBrush="{x:Null}" Width="246" Height="45">
