--- a/MyLibrary/MyLibrary/View/Books.xaml
+++ b/MyLibrary/MyLibrary/View/Books.xaml
@@ -25,6 +25,15 @@
 
         <StackPanel Margin="660,133,341,152">
 
+            <Button Command="{Binding AllCommand}" Width="50" Height="30" Style="{StaticResource MaterialDesignRaisedDarkButton}"   materialDesign:ButtonAssist.CornerRadius="25" >
+                <materialDesign:PackIcon Kind="Book"/>
+                <Button.ToolTip>
+                    <ToolTip>Все книги</ToolTip>
+                </Button.ToolTip>
+            </Button>
+
+            <Separator Height="1" Margin="10,2,9.667,2"/>
+
             <Button Command="{Binding DetectiveCommand}"  Width="50" Height="30" Style="{StaticResource MaterialDesignRaisedDarkButton}"   materialDesign:ButtonAssist.CornerRadius="25" >
                 <materialDesign:PackIcon Kind="Magnify"/>
                 <Button.ToolTip>
@@ -78,14 +87,7 @@
 
             <Separator Height="1" Margin="10,2,9.667,2"/>
 
-            <Button Command="{Binding AllCommand}" Width="50" Height="30" Style="{StaticResource MaterialDesignRaisedDarkButton}"   materialDesign:ButtonAssist.CornerRadius="25" >
-                <materialDesign:PackIcon Kind="Book"/>
-                <Button.ToolTip>
-                    <ToolTip>Все книги</ToolTip>
-                </Button.ToolTip>
-            </Button>
-
-            <Separator Height="1" Margin="10,2,9.667,2"/>
+            
 
             <Button Command="{Binding RomanCommand}" Width="50" Height="30" Style="{StaticResource MaterialDesignRaisedDarkButton}"   materialDesign:ButtonAssist.CornerRadius="25" >
                 <materialDesign:PackIcon Kind="People"/>
@@ -101,10 +103,17 @@
             <materialDesign:PackIcon Kind="Add" Height="39" Width="37" />
         </Button>
         <Image Source="Resources/Images/Hermione.jpg" HorizontalAlignment="Left" Height="123" Margin="599,10,0,0" VerticalAlignment="Top" Width="120"/>
+
+        <Button Command="{Binding StatusCommand}"
+            Style="{StaticResource MaterialDesignFlatMidBgButton}"
+            ToolTip="MaterialDesignFlatMidButton" Height="Auto" Margin="641,443,320,106">
+          Изменить статус
+        </Button>
+
         <Button Command="{Binding DeleteCommand}"
     Style="{StaticResource MaterialDesignRaisedButton}"
     Width="100"
-    ToolTip="Resource name: MaterialDesignRaisedButton" Margin="660,472,352,76">
+    ToolTip="Resource name: MaterialDesignRaisedButton" Margin="665,490,347,57" Height="Auto">
             Удалить
         </Button>
 
