--- a/MyLibrary/MyLibrary/View/Films.xaml
+++ b/MyLibrary/MyLibrary/View/Films.xaml
@@ -28,7 +28,7 @@
 
 
             <Button Command="{Binding AllCommand}" Width="50" Height="30" Style="{StaticResource MaterialDesignRaisedDarkButton}"   materialDesign:ButtonAssist.CornerRadius="25" >
-                <materialDesign:PackIcon Kind="Movie"/>
+                <materialDesign:PackIcon Kind="MovieRoll"/>
                 <Button.ToolTip>
                     <ToolTip>Все книги</ToolTip>
                 </Button.ToolTip>
@@ -102,10 +102,16 @@
         <Button Command="{Binding AddCommand}" Style="{StaticResource MaterialDesignFloatingActionAccentButton}" Margin="983,472,73.333,52">
             <materialDesign:PackIcon Kind="Add" Height="39" Width="37" />
         </Button>
+        <Button Command="{Binding StatusCommand}"
+            Style="{StaticResource MaterialDesignFlatMidBgButton}"
+            ToolTip="MaterialDesignFlatMidButton" Height="Auto" Margin="641,443,320,106">
+            Изменить статус
+        </Button>
+
         <Button Command="{Binding DeleteCommand}"
     Style="{StaticResource MaterialDesignRaisedButton}"
     Width="100"
-    ToolTip="Resource name: MaterialDesignRaisedButton" Margin="660,472,352,76">
+    ToolTip="Resource name: MaterialDesignRaisedButton" Margin="665,490,347,57" Height="Auto">
             Удалить
         </Button>
 
